linked and css done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span>INTER PRO</span>
             <!-- <a href="Login.html">  <span>Log in </span></a> -->
             <a href="Login.html">
-              <span> Sing Up </span>
+              <span  class="singUp"> Sing Up </span>
             </a>
            
            
