Result page created

--- a/banVsri.html
+++ b/banVsri.html
@@ -259,7 +259,7 @@
                 <img  id="mid-img" style="width:100%; " src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_720/lsci/db/PICTURES/CMS/334600/334688.6.jpg" alt="">
             </div>
 
-                <div style="background-color: black;position: relative; margin-top: -10px; padding: 10px; border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;line-height: 20px;"> 
+                <div style="background-color: black;position: static; margin-top: -10px; padding: 10px; border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;line-height: 20px;"> 
                     <h2 style="color: white; ">Uncapped Kamil, Kamindu, Madushanka and Suminda in Sri Lanka squad for Bangladesh Tests</h2>
                     <p style="color: white;margin-top: 10px;">
                         Meanwhile, Oshada Fernando, Ramesh Mendis, and fast bowlers Kasun Rajitha and Asitha Fernando have returned to the Test side </p>
