--- a/county-div2.html
+++ b/county-div2.html
@@ -181,12 +181,12 @@
 <div id="left-box">
         <!-- buttons start -->
         <div style="display: grid; grid-template-columns: 1fr 1fr">
-            <div style="background-color: #03a9f4; padding: 8px 25px; cursor: pointer;  border-top-left-radius: 5px; border-bottom-left-radius: 5px;">
-                 <span > <a id="span-click1" href="#">Fixtures</a> </span>
+            <div style="background-color: #fff ; padding: 8px 25px; cursor: pointer;  border-top-left-radius: 5px; border-bottom-left-radius: 5px;">
+                 <span > <a id="span-click2" href="fixtures.html" >Fixtures</a> </span>
              </div> 
      
-             <div style="background-color: #fff;padding: 7px 25px; border: 1px solid #03a9f4 ;cursor: pointer;border-top-right-radius:5px;border-bottom-right-radius:5px; text-align: center;" >
-                     <span > <a id="span-click2" href="#">Results</a> </span>
+             <div style="background-color: #03a9f4;padding: 7px 25px; border: 1px solid #03a9f4 ;cursor: pointer;border-top-right-radius:5px;border-bottom-right-radius:5px; text-align: center;" >
+                     <span > <a id="span-click1" href="results.html" >Results </a> </span>
               </div> 
         </div>
       <!-- buttons end -->
@@ -313,7 +313,7 @@
                 <img  id="mid-img" style="width:100%; " src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_720/lsci/db/PICTURES/CMS/290700/290788.6.jpg" alt="">
             </div>
 
-                <div style="background-color: black;position: relative; margin-top: -10px; padding: 10px; border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;line-height: 20px;"> 
+                <div style="background-color: black;position: static; margin-top: -10px; padding: 10px; border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;line-height: 20px;"> 
                     <h2 style="color: white; ">Mohammad Amir: Too early to talk about a Test return</h2>
                     <p style="color: white;margin-top: 10px;">
                         Fast bowler returned to first-class cricket after two-and-a-half years, picking up three wickets in his second game for Gloucestershire
@@ -426,8 +426,8 @@
         
     </div>
 
-    <div id="right-box-table" style="position:relative;">
-       <img id="mid-img1" style=" overflow: hidden; border-radius: 15px;margin-bottom: -5px; position: relative;overflow: auto;" src="Capture.PNG" alt="">
+    <div id="right-box-table" style="position:static;">
+       <img id="mid-img1" style=" overflow: hidden; border-radius: 15px;margin-bottom: -5px; position: static;overflow: auto;" src="Capture.PNG" alt="">
     </div>
 
 <!-- table start point -->
