--- a/fair-break.html
+++ b/fair-break.html
@@ -179,14 +179,14 @@
 
 <!-- Left content box start -->
 <div id="left-box">
-        <!-- buttons start -->
-        <div style="display: grid; grid-template-columns: 1fr 1fr">
-            <div style="background-color: #03a9f4; padding: 8px 25px; cursor: pointer;  border-top-left-radius: 5px; border-bottom-left-radius: 5px;">
-                 <span > <a id="span-click1" href="#">Fixtures</a> </span>
+         <!-- buttons start -->
+         <div style="display: grid; grid-template-columns: 1fr 1fr">
+            <div style="background-color: #fff ; padding: 8px 25px; cursor: pointer;  border-top-left-radius: 5px; border-bottom-left-radius: 5px;">
+                 <span > <a id="span-click2" href="fixtures.html" >Fixtures</a> </span>
              </div> 
      
-             <div style="background-color: #fff;padding: 7px 25px; border: 1px solid #03a9f4 ;cursor: pointer;border-top-right-radius:5px;border-bottom-right-radius:5px; text-align: center;" >
-                     <span > <a id="span-click2" href="#">Results</a> </span>
+             <div style="background-color: #03a9f4;padding: 7px 25px; border: 1px solid #03a9f4 ;cursor: pointer;border-top-right-radius:5px;border-bottom-right-radius:5px; text-align: center;" >
+                     <span > <a id="span-click1" href="results.html" >Results </a> </span>
               </div> 
         </div>
       <!-- buttons end -->
@@ -399,7 +399,7 @@
                 <img  id="mid-img" style="width:100%; " src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_720/lsci/db/PICTURES/CMS/338700/338735.6.jpg" alt="">
             </div>
 
-                <div style="background-color: black;position: relative; margin-top: -10px; padding: 10px; border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;"> 
+                <div style="background-color: black;position: static; margin-top: -10px; padding: 10px; border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;"> 
                     <h2 style="color: white;">FairBreak-bound Sana Mir excited to share stage alongside 'great group of people'</h2>
                     <p style="color: white;">"Sports can transcend boundaries and nationalities and that's what we are seeing here"</p>
                 </div> 
