--- a/ipl-2022.html
+++ b/ipl-2022.html
@@ -183,11 +183,11 @@
         <!-- buttons start -->
         <div style="display: grid; grid-template-columns: 1fr 1fr">
             <div style="background-color: #03a9f4; padding: 8px 25px; cursor: pointer;  border-top-left-radius: 5px; border-bottom-left-radius: 5px;">
-                 <span > <a id="span-click1" href="#">Fixtures</a> </span>
+                 <span > <a id="span-click1"href="fixtures.html"  >Fixtures</a> </span>
              </div> 
      
              <div style="background-color: #fff;padding: 7px 25px; border: 1px solid #03a9f4 ;cursor: pointer;border-top-right-radius:5px;border-bottom-right-radius:5px; text-align: center;" >
-                     <span > <a id="span-click2" >Results </a> </span>
+                     <span > <a id="span-click2" href="results.html" >Results </a> </span>
               </div> 
         </div>
       <!-- buttons end -->
@@ -455,7 +455,7 @@
 
         <div style="display: flex; justify-content: space-around;align-items:flex-start; padding: 12px;border-bottom:.1px solid rgb(235, 232, 232);">
             <div >
-                <img  style="height: 130px; position: relative; margin-right: 10px; border-radius: 8px; position: relative;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_720/lsci/db/PICTURES/CMS/338800/338841.6.jpg" alt="">
+                <img  style="height: 130px; position: static; margin-right: 10px; border-radius: 8px; position: static;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_720/lsci/db/PICTURES/CMS/338800/338841.6.jpg" alt="">
             </div>
             <div style="width:100%;" >
                 <h3 style="margin-bottom: 15px; font-size: 16px;">Report: All-round bowling show lifts RCB into top four</h3>
@@ -475,15 +475,15 @@
 
         <div style="display: flex;justify-content: space-between; padding: 8px 10px 8px 10px;">
             <div style="width: 32%; ">
-                <img id="mid-img" style="width: 100%;position: relative;border-radius: 5px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
+                <img id="mid-img" style="width: 100%;position: static;border-radius: 5px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
                 <p style="font-size: 13px;margin-top: 10px; margin-bottom: 10px;">Bishop: 'Concerned that many types of bowlers are getting Kohli out'</p>
             </div>
             <div style="width: 32%; ">
-                <img id="mid-img" style="width: 100%;position: relative;border-radius: 5px;"src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
+                <img id="mid-img" style="width: 100%;position: static;border-radius: 5px;"src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
                 <p style="font-size: 13px; margin-top: 10px; margin-bottom: 10px;">Bishop: 'Concerned that many types of bowlers are getting Kohli out'</p>
             </div>
             <div style="width: 32%; ">
-                <img id="mid-img" style="width: 100%;position: relative;border-radius: 5px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
+                <img id="mid-img" style="width: 100%;position: static;border-radius: 5px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
                 <p style="font-size: 13px;margin-top: 10px; margin-bottom: 10px;">Bishop: 'Concerned that many types of bowlers are getting Kohli out'</p>
             </div> 
 
@@ -529,7 +529,7 @@
 
         <div style="display: flex; justify-content: space-around;align-items:flex-start; padding: 12px;border-bottom:.1px solid rgb(235, 232, 232);">
             <div >
-                <img  style="height: 130px; position: relative; margin-right: 10px; border-radius: 8px; position: relative;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_720/lsci/db/PICTURES/CMS/338800/338841.6.jpg" alt="">
+                <img  style="height: 130px; position:static; margin-right: 10px; border-radius: 8px; position:static;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_720/lsci/db/PICTURES/CMS/338800/338841.6.jpg" alt="">
             </div>
             <div style="width:100%;" >
                 <h3 style="margin-bottom: 15px; font-size: 16px;">Report: All-round bowling show lifts RCB into top four</h3>
@@ -549,15 +549,15 @@
 
         <div style="display: flex;justify-content: space-between; padding: 8px 10px 8px 10px;">
             <div style="width: 32%; ">
-                <img id="mid-img" style="width: 100%;position: relative;border-radius: 5px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
+                <img id="mid-img" style="width: 100%;position:static;border-radius: 5px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
                 <p style="font-size: 13px;margin-top: 10px; margin-bottom: 10px;">Bishop: 'Concerned that many types of bowlers are getting Kohli out'</p>
             </div>
             <div style="width: 32%; ">
-                <img id="mid-img" style="width: 100%;position: relative;border-radius: 5px;"src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
+                <img id="mid-img" style="width: 100%;position: static;border-radius: 5px;"src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
                 <p style="font-size: 13px; margin-top: 10px; margin-bottom: 10px;">Bishop: 'Concerned that many types of bowlers are getting Kohli out'</p>
             </div>
             <div style="width: 32%; ">
-                <img id="mid-img" style="width: 100%;position: relative;border-radius: 5px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
+                <img id="mid-img" style="width: 100%;position: static;border-radius: 5px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
                 <p style="font-size: 13px;margin-top: 10px; margin-bottom: 10px;">Bishop: 'Concerned that many types of bowlers are getting Kohli out'</p>
             </div> 
 
@@ -603,7 +603,7 @@
 
         <div style="display: flex; justify-content: space-around;align-items:flex-start; padding: 12px;border-bottom:.1px solid rgb(235, 232, 232);">
             <div >
-                <img  style="height: 130px; position: relative; margin-right: 10px; border-radius: 8px; position: relative;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_720/lsci/db/PICTURES/CMS/338800/338841.6.jpg" alt="">
+                <img  style="height: 130px; margin-right: 10px; border-radius: 8px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_720/lsci/db/PICTURES/CMS/338800/338841.6.jpg" alt="">
             </div>
             <div style="width:100%;" >
                 <h3 style="margin-bottom: 15px; font-size: 16px;">Report: All-round bowling show lifts RCB into top four</h3>
@@ -623,15 +623,15 @@
 
         <div style="display: flex;justify-content: space-between; padding: 8px 10px 8px 10px;">
             <div style="width: 32%; ">
-                <img id="mid-img" style="width: 100%;position: relative;border-radius: 5px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
+                <img id="mid-img" style="width: 100%;border-radius: 5px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
                 <p style="font-size: 13px;margin-top: 10px; margin-bottom: 10px;">Bishop: 'Concerned that many types of bowlers are getting Kohli out'</p>
             </div>
             <div style="width: 32%; ">
-                <img id="mid-img" style="width: 100%;position: relative;border-radius: 5px;"src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
+                <img id="mid-img" style="width: 100%;border-radius: 5px;"src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
                 <p style="font-size: 13px; margin-top: 10px; margin-bottom: 10px;">Bishop: 'Concerned that many types of bowlers are getting Kohli out'</p>
             </div>
             <div style="width: 32%; ">
-                <img id="mid-img" style="width: 100%;position: relative;border-radius: 5px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
+                <img id="mid-img" style="width: 100%;border-radius: 5px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_240/esci/media/motion/2022/0504/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global/dm_220504_INET_CRIC_timeout_m49_conway_maruti_iqoo_global.jpg" alt="">
                 <p style="font-size: 13px;margin-top: 10px; margin-bottom: 10px;">Bishop: 'Concerned that many types of bowlers are getting Kohli out'</p>
             </div> 
 
@@ -666,8 +666,8 @@
         
     </div>
 
-    <div id="right-box-table" style="position:relative;">
-       <img id="mid-img1" style=" overflow: hidden; border-radius: 15px;margin-bottom: -5px; position: relative;overflow: auto;" src="Capture.PNG" alt="">
+    <div id="right-box-table" style="position:static;">
+       <img id="mid-img1" style=" overflow: hidden; border-radius: 15px;margin-bottom: -5px; position: static;overflow: auto;" src="Capture.PNG" alt="">
     </div>
 
 <!-- table start point -->
