--- a/ranji-trophy.html
+++ b/ranji-trophy.html
@@ -183,14 +183,14 @@
 
 <!-- Left content box start -->
 <div id="left-box">
-        <!-- buttons start -->
-        <div style="display: grid; grid-template-columns: 1fr 1fr">
-            <div style="background-color: #03a9f4; padding: 8px 25px; cursor: pointer;  border-top-left-radius: 5px; border-bottom-left-radius: 5px;">
-                 <span > <a id="span-click1" href="#">Fixtures</a> </span>
+         <!-- buttons start -->
+         <div style="display: grid; grid-template-columns: 1fr 1fr">
+            <div style="background-color: #fff ; padding: 8px 25px; cursor: pointer;  border-top-left-radius: 5px; border-bottom-left-radius: 5px;">
+                 <span > <a id="span-click2" href="fixtures.html" >Fixtures</a> </span>
              </div> 
      
-             <div style="background-color: #fff;padding: 7px 25px; border: 1px solid #03a9f4 ;cursor: pointer;border-top-right-radius:5px;border-bottom-right-radius:5px; text-align: center;" >
-                     <span > <a id="span-click2" href="#">Results</a> </span>
+             <div style="background-color: #03a9f4;padding: 7px 25px; border: 1px solid #03a9f4 ;cursor: pointer;border-top-right-radius:5px;border-bottom-right-radius:5px; text-align: center;" >
+                     <span > <a id="span-click1" href="results.html" >Results </a> </span>
               </div> 
         </div>
       <!-- buttons end -->
@@ -317,7 +317,7 @@
                 <img  id="mid-img" style="width:100%; " src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_wide_w_720/lsci/db/PICTURES/CMS/335400/335452.6.jpg" alt="">
             </div>
 
-                <div style="background-color: black;position: relative; margin-top: -10px; padding: 10px; border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;line-height: 20px;"> 
+                <div style="background-color: black;position: static; margin-top: -10px; padding: 10px; border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;line-height: 20px;"> 
                     <h2 style="color: white; ">Bengaluru to host Ranji Trophy knockouts from June 4</h2>
                     <p style="color: white;margin-top: 10px;">"The first-class competition will resume after the IPL in a bio-bubble, with the final scheduled for June 20-24"</p>
                 </div>
