--- a/world-test-champ.html
+++ b/world-test-champ.html
@@ -179,14 +179,14 @@
 
 <!-- Left content box start -->
 <div id="left-box">
-        <!-- buttons start -->
-        <div style="display: grid; grid-template-columns: 1fr 1fr">
-            <div style="background-color: #03a9f4; padding: 8px 25px; cursor: pointer;  border-top-left-radius: 5px; border-bottom-left-radius: 5px;">
-                 <span > <a id="span-click1" href="#">Fixtures</a> </span>
+         <!-- buttons start -->
+         <div style="display: grid; grid-template-columns: 1fr 1fr">
+            <div style="background-color: #fff ; padding: 8px 25px; cursor: pointer;  border-top-left-radius: 5px; border-bottom-left-radius: 5px;">
+                 <span > <a id="span-click2" href="fixtures.html" >Fixtures</a> </span>
              </div> 
      
-             <div style="background-color: #fff;padding: 7px 25px; border: 1px solid #03a9f4 ;cursor: pointer;border-top-right-radius:5px;border-bottom-right-radius:5px; text-align: center;" >
-                     <span > <a id="span-click2" href="#">Results</a> </span>
+             <div style="background-color: #03a9f4;padding: 7px 25px; border: 1px solid #03a9f4 ;cursor: pointer;border-top-right-radius:5px;border-bottom-right-radius:5px; text-align: center;" >
+                     <span > <a id="span-click1" href="results.html" >Results </a> </span>
               </div> 
         </div>
       <!-- buttons end -->
