--- a/ipl-2022.html
+++ b/ipl-2022.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   
-  <!--phone size-->
+   <!--phone size-->
   <!--phone end  size-->
     <!--Head start---------------------------->
     <!--Hlw-->
@@ -45,12 +45,16 @@
              <span class="active_matches">Matches</span>
              <span>IPL</span>
              <span>INTER PRO</span>
+             <!-- <a href="Login.html">  <span>Log in </span></a> -->
+             <a href="Login.html">
+               <span  class="singUp"> Sing Up </span>
+             </a>
             
             
             </div>
             <div id="match_box_body">
             <!--match box 1------------------------>
-              <div class="match_boxtnc">
+              <div class="match_box tnc">
                <div class="match_headline"> <b>RESULT</b>. <b>48th Match</b> . <b>T20.DY</b>  Patil</div>
                <div class="team_1">
                  <div class="team1_split">
