--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <span>IPL</span>
             <span>INTER PRO</span>
             <!-- <a href="Login.html">  <span>Log in </span></a> -->
-            <a href="Login.html">
-              <span  class="singUp"> Sing Up </span>
+            <a href="signup.html">
+              <span  class="singUp">SIGN UP</span>
             </a>
            
            
